--- a/frontend/src/profile/ProfilePage.css
+++ b/frontend/src/profile/ProfilePage.css
@@ -11,17 +11,6 @@ h1 {
     margin-bottom: 20px;
 }
 
-.profile-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-        height: 15em;
-    padding: 20px;
-    background-color: transparent;
-    margin-top: 100px;
-}
-
 .profile-card {
     padding: 20px;
     border-radius: 10px;
